--- a/widget/index.html
+++ b/widget/index.html
@@ -7,13 +7,23 @@
     
 </head>
 <body>
+    <table>
+        <tr>
+            <td>序号</td>
+            <td>姓名</td>
+        </tr>
+        <tr>
+            <td>01</td>
+            <td>蔡晓茹</td>
+        </tr>
 
+    </table>
 
 </body>
 <script src="js/jquery-3.1.1.min.js"></script>
 <script>
     $(function(){
-        $(window).attr('location','http://192.168.1.194:8090/menu/');
+        // $(window).attr('location','http://192.168.1.194:8090/menu/');
          // $(window).attr('location','html/one.html');
     })
 </script>
