a Signed-off-by: caixiaoru <1441780228@qq.com>

--- a/widget/index.html
+++ b/widget/index.html
@@ -16,6 +16,10 @@
             <td>01</td>
             <td>蔡晓茹</td>
         </tr>
+        <tr>
+            <td>02</td>
+            <td>蔡晓茹</td>
+        </tr>
 
     </table>
 
