--- a/widget/index.html
+++ b/widget/index.html
@@ -9,17 +9,16 @@
     
 </head>
 <body>
-    <div id="wrap">
-        <div id="header">
-            <h1>APICloud</h1>
-        </div>
-        <div id="main">
-                
-        </div>
-        <div id="footer">
-            <h5>Copyright &copy;<span id="year"></span> </h5>
-        </div>
-    </div>
+    <table>
+        <tr>
+            <td>序号</td>
+            <td>姓名</td>
+        </tr>
+        <tr>
+            <td>01</td>
+            <td>蔡晓茹</td>
+        </tr>
+    </table>
 </body>
 
 </html>
