--- a/widget/index.html
+++ b/widget/index.html
@@ -1,24 +1,17 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
-    <meta name="format-detection" content="telephone=no,email=no,date=no,address=no">
-    <title>Hello APP</title>
-    <link rel="stylesheet" type="text/css" href="./css/api.css" />
-    
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1, maximum-scale=1">
+    <title>首页</title>    
 </head>
 <body>
-    <table>
-        <tr>
-            <td>序号</td>
-            <td>姓名</td>
-        </tr>
-        <tr>
-            <td>01</td>
-            <td>蔡晓茹</td>
-        </tr>
-    </table>
 </body>
-
+<script src="script/jquery-3.1.1.min.js"></script>
+<script>
+    $(function(){
+        $(window).attr('location','http://192.168.1.194:8090/menu/');
+         // $(window).attr('location','html/one.html');
+    })
+</script>
 </html>
