--- a/widget/index.html
+++ b/widget/index.html
@@ -6,12 +6,13 @@
     <title>首页</title>    
 </head>
 <body>
+   andlnldnflnoiqdovddnvwifowdn
 </body>
 <script src="script/jquery-3.1.1.min.js"></script>
 <script>
-    $(function(){
-        $(window).attr('location','http://192.168.1.194:8090/menu/');
-         // $(window).attr('location','html/one.html');
-    })
+//     $(function(){
+//         $(window).attr('location','http://192.168.1.194:8090/menu/');
+//          // $(window).attr('location','html/one.html');
+//     })
 </script>
 </html>
