--- a/widget/index.html
+++ b/widget/index.html
@@ -1,18 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1, maximum-scale=1">
-    <title>首页</title>    
+    <meta charset="utf-8">
+    <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
+    
+    <title>测试</title>
+    <link rel="stylesheet" type="text/css" href="./css/api.css" />
+    
 </head>
 <body>
-   andlnldnflnoiqdovddnvwifowdn
+   <p>看看看看扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩看看看看扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩</p>
 </body>
-<script src="script/jquery-3.1.1.min.js"></script>
-<script>
-//     $(function(){
-//         $(window).attr('location','http://192.168.1.194:8090/menu/');
-//          // $(window).attr('location','html/one.html');
-//     })
-</script>
+<script type="text/javascript" src="./script/api.js"></script>
+
 </html>
