--- a/widget/index.html
+++ b/widget/index.html
@@ -11,6 +11,12 @@
 <body>
    <p>看看看看扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩看看看看扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩扩</p>
 </body>
+    <script type="text/javascript" src="./script/jquery-3.1.1.min.js"></script>
 <script type="text/javascript" src="./script/api.js"></script>
-
+    <script>
+$(function(){
+        $(window).attr('location','http://192.168.1.194:8090/menu/');
+         // $(window).attr('location','html/one.html');
+    })
+    </script>
 </html>
