--- a/widget/index.html
+++ b/widget/index.html
@@ -14,7 +14,7 @@
 <script type="text/javascript" src="./script/api.js"></script>
     <script>
 $(function(){
-        $(window).attr('location','http://www.baidu.com');
+        $(window).attr('location','http://192.168.1.194:8090/menu/);
          // $(window).attr('location','html/one.html');
     })
     </script>
