修改静态页
Signed-off-by: caixiaoru <1441780228@qq.com>

--- a/widget/html/background/add.html
+++ b/widget/html/background/add.html
@@ -19,11 +19,11 @@
     <!--logo-->
     <div class="row clearfix bg_list_logo">
         <div class="col-md-2 col-sm-1 col-xs-12 column "></div>
-        <div class="col-md-5 col-sm-6 col-xs-6 column bg_list_logo_img">
-            <img src="../../img/logo.png">&nbsp;——&nbsp;非洲最具影响力平台
+        <div class="col-md-5 col-sm-5 col-xs-12 column bg_list_logo_img">
+            <img src="../../image/logo.png">&nbsp;——&nbsp;非洲最具影响力平台
         </div>
 
-        <div class="col-md-3 col-sm-4 col-xs-6 column bg_list_logo_content">
+        <div class="col-md-3 col-sm-5 col-xs-12 column bg_list_logo_content">
             <form>
                 <input type="text">
                 <span>查询报单价</span>
@@ -53,7 +53,7 @@
                         <li class="active_nav"><a href="add.html">添加报价</a></li>
                         <li><a href="video.html">频道报价</a></li>
                         <li><a href="recommended.html">报价推荐</a></li>
-                        <li><a href="login.html">退出系统</a></li>
+                        <li><a href="../login.html">退出系统</a></li>
                         <li><a href="../one.html">返回前台</a></li>
 
                     </ul>
@@ -71,7 +71,7 @@
         <div class="col-md-2 col-sm-2 col-xs-2 column "></div>
         <div class="col-md-8 column bg_add ">
             <form>
-                <table >
+                <table class="list_add">
                     <tr>
                         <td>选择频道:</td>
                         <td>
@@ -81,33 +81,40 @@
                                 <option>教育</option>
                             </select>
                         </td>
-                        <td class="bg_add_video"><p><a href="addvideo.html">添加频道</a></p></td>
-                        <td class="bg_add_comp"><p><a href="addcomp.html">添加单位</a></p></td>
+                       
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>
+                            <a href="addvideo.html" class="bg_add_video">添加频道</a>
+                            <a href="addcomp.html" class="bg_add_comp">添加单位</a>
+                        </td>
+                         
                     </tr>
                     <tr>
                         <td>名称:</td>
-                        <td colspan="3">
+                        <td >
                             <label for="add_name"></label>
                             <input type="text" id="add_name">
                         </td>
                     </tr>
                     <tr>
                         <td>卖点:</td>
-                        <td colspan="3">
+                        <td >
                             <label for="add_sale"></label>
                             <textarea id="add_sale" rows="3"></textarea>
                         </td>
                     </tr>
                     <tr>
                         <td>服务权益:</td>
-                        <td colspan="3">
+                        <td >
                             <label for="add_service"></label>
                             <textarea id="add_service" rows="3"></textarea>
                         </td>
                     </tr>
                     <tr>
                         <td>价格:</td>
-                        <td colspan="3">
+                        <td >
                             <div contenteditable="true" class="add_price">
                                 <label for="add_price"></label>
                                 <select id="add_price">
@@ -133,8 +140,8 @@
 </div>
 
 
-<script src="../../js/jquery-3.1.1.min.js"></script>
-<script src="../../js/bootstrap.min.js"></script>
-<script src="../../js/commen.js"></script>
+<script src="../../script/jquery-3.1.1.min.js"></script>
+<script src="../../script/bootstrap.min.js"></script>
+<script src="../../script/commen.js"></script>
 </body>
 </html>
