--- a/widget/html/background/editcomp.html
+++ b/widget/html/background/editcomp.html
@@ -17,13 +17,13 @@
         </div>
     </div>
     <!--logo-->
-    <div class="row clearfix bg_list_logo">
+     <div class="row clearfix bg_list_logo">
         <div class="col-md-2 col-sm-1 col-xs-12 column "></div>
-        <div class="col-md-5 col-sm-6 col-xs-6 column bg_list_logo_img">
-            <img src="../../img/logo.png">&nbsp;——&nbsp;非洲最具影响力平台
+        <div class="col-md-5 col-sm-5 col-xs-12 column bg_list_logo_img">
+            <img src="../../image/logo.png">&nbsp;——&nbsp;非洲最具影响力平台
         </div>
 
-        <div class="col-md-3 col-sm-4 col-xs-6 column bg_list_logo_content">
+        <div class="col-md-3 col-sm-5 col-xs-12 column bg_list_logo_content">
             <form>
                 <input type="text">
                 <span>查询报单价</span>
@@ -131,8 +131,8 @@
 </div>
 
 
-<script src="../../js/jquery-3.1.1.min.js"></script>
-<script src="../../js/bootstrap.min.js"></script>
-<script src="../../js/commen.js"></script>
+<script src="../../script/jquery-3.1.1.min.js"></script>
+<script src="../../script/bootstrap.min.js"></script>
+<script src="../../script/commen.js"></script>
 </body>
 </html>
