--- a/widget/html/background/recommendedadd.html
+++ b/widget/html/background/recommendedadd.html
@@ -17,13 +17,13 @@
         </div>
     </div>
     <!--logo-->
-    <div class="row clearfix bg_list_logo">
+       <div class="row clearfix bg_list_logo">
         <div class="col-md-2 col-sm-1 col-xs-12 column "></div>
-        <div class="col-md-5 col-sm-6 col-xs-6 column bg_list_logo_img">
-            <img src="../../img/logo.png">&nbsp;——&nbsp;非洲最具影响力平台
+        <div class="col-md-5 col-sm-5 col-xs-12 column bg_list_logo_img">
+            <img src="../../image/logo.png">&nbsp;——&nbsp;非洲最具影响力平台
         </div>
 
-        <div class="col-md-3 col-sm-4 col-xs-6 column bg_list_logo_content">
+        <div class="col-md-3 col-sm-5 col-xs-12 column bg_list_logo_content">
             <form>
                 <input type="text">
                 <span>查询报单价</span>
@@ -53,7 +53,7 @@
                         <li><a href="add.html">添加报价</a></li>
                         <li><a href="video.html">频道报价</a></li>
                         <li class="active_nav"><a href="recommended.html">报价推荐</a></li>
-                        <li><a href="login.html">退出系统</a></li>
+                        <li><a href="../login.html">退出系统</a></li>
                         <li><a href="../one.html">返回前台</a></li>
 
                     </ul>
@@ -76,7 +76,7 @@
                 <div class="bg_add_btn_replay">查看推荐列表</div>
             </div>
             <form>
-                <table >
+                <table class="list_add">
                     <tr>
                         <td>推荐名称:</td>
                         <td>
@@ -86,7 +86,7 @@
                     </tr>
                     <tr>
                         <td>上传图片:</td>
-                        <td colspan="3">
+                        <td >
                             <div contenteditable="true" class="add_price">
                                 <label for="recom_img"></label>
                                 <input type="file" id="recom_img">
@@ -113,7 +113,7 @@
 
                     <tr>
                         <td>推荐说明:</td>
-                        <td colspan="3">
+                        <td >
                             <label for="recom_info"></label>
                             <textarea id="recom_info" rows="3"></textarea>
                         </td>
@@ -139,8 +139,8 @@
 </div>
 
 
-<script src="../../js/jquery-3.1.1.min.js"></script>
-<script src="../../js/bootstrap.min.js"></script>
-<script src="../../js/commen.js"></script>
+<script src="../../script/jquery-3.1.1.min.js"></script>
+<script src="../../script/bootstrap.min.js"></script>
+<script src="../../script/commen.js"></script>
 </body>
 </html>
