--- a/widget/index.html
+++ b/widget/index.html
@@ -6,18 +6,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1, maximum-scale=1">
     <title>首页</title>
-    <link rel="stylesheet" href="css/api.css">    
+   
 </head>
 <body>
 
 
 
 <script src="script/jquery-1.11.0.min.js"></script>
-<script src="script/api.js"></script>
+
 <script>
     $(function(){
         //$(window).attr('location','html/test.html');
-          $(window).attr('location','html/login2.html');
+          $(window).attr('location','html/one.html');
         
     })
 </script>
